# shader-chef-debian

./: .cproject  .project  CMakeLists.txt  shaderapp  shadertest.cpp
Debug/: makefile  objects.mk  subdir.mk
ogl_dump/: CMakeLists.txt  README.md  shadertest  shadertest.cpp
ogl_dump/Debug/: makefile  objects.mk
passing_through/: CMakeLists.txt  Quintadecima.hpp  QuintadecimaOut.rb  QuintadecimaRaw.hpp  fs_basic.glsl  passing_through.cpp  vs_basic.glsl  vs_center.glsl
shader_utils/: DumbProgramObject.hpp  DumbShaderObject.hpp  shader_utils.hpp
textiled/: CMakeLists.txt  QuintadecimaTex.hpp  fs_blob.glsl  textiled.cpp  vs_blob.glsl
